--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "promise-polyfill": "^6.0.2",
-    "wepy": "^1.5.7",
+    "wepy": "^1.7.1",
     "wepy-async-function": "^1.4.4",
     "wepy-com-toast": "^1.0.2"
   },
   "devDependencies": {
+    "babel-compiler": "^1.0.8",
     "babel-eslint": "^7.2.1",
     "babel-plugin-syntax-export-extensions": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -30,8 +31,8 @@
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
-    "wepy-compiler-babel": "^1.5.1",
-    "wepy-compiler-less": "^1.3.10",
+    "wepy-compiler-babel": "^1.5.2",
+    "wepy-compiler-less": "^1.3.12",
     "wepy-eslint": "^1.5.2",
     "wepy-plugin-imagemin": "^1.5.2",
     "wepy-plugin-uglifyjs": "^1.3.6"
